testsuite/tests/rename/should_fail/T9032.hs
{-# LANGUAGE CPP #-}

module T9032 where

#if defined(ERR)
import T9032
#endif

f x = x



